tree-sitter-sass/test/corpus/advanced.txt
================================================================================
If Statement
================================================================================

@if $dark
  color: white

---

(stylesheet
  (if_statement
    (if_clause
      (condition
        (variable_value))
      (block
        (declaration
          (property_name)
          (plain_value))))))

================================================================================
If Else Statement
================================================================================

@if $dark
  color: white
@else
  color: black

---

(stylesheet
  (if_statement
    (if_clause
      (condition
        (variable_value))
      (block
        (declaration
          (property_name)
          (plain_value))))
    (else_clause
      (block
        (declaration
          (property_name)
          (plain_value))))))

================================================================================
Each Loop
================================================================================

@each $color in $colors
  .text-#{$color}
    color: $color

---

(stylesheet
  (each_statement
    (variable)
    (variable_value)
    (block
      (rule_set
        (selectors
          (class_selector
            (class_name
              (interpolation
                (variable_value)))))
        (block
          (declaration
            (property_name)
            (variable_value)))))))

================================================================================
For Loop
================================================================================

@for $i from 1 through 3
  .col-#{$i}
    width: 100px

---

(stylesheet
  (for_statement
    (variable_name)
    (from_value
      (integer_value))
    (to_value
      (integer_value))
    (block
      (rule_set
        (selectors
          (class_selector
            (class_name
              (interpolation
                (variable_value)))))
        (block
          (declaration
            (property_name)
            (integer_value
              (unit))))))))

================================================================================
While Loop
================================================================================

@while $i > 0
  .item
    margin: 10px

---

(stylesheet
  (while_statement
    (condition
      (binary_expression
        left: (variable_value)
        right: (integer_value)))
    (block
      (rule_set
        (selectors
          (class_selector
            (class_name)))
        (block
          (declaration
            (property_name)
            (integer_value
              (unit))))))))

================================================================================
Function Definition
================================================================================

@function double($n)
  @return $n * 2

---

(stylesheet
  (function_statement
    (name)
    (parameters
      (parameter
        (variable_name)))
    (block
      (return_statement
        (binary_expression
          left: (variable_value)
          right: (integer_value))))))

================================================================================
Media Query
================================================================================

@media screen
  .box
    width: 100px

---

(stylesheet
  (media_statement
    (keyword_query)
    (block
      (rule_set
        (selectors
          (class_selector
            (class_name)))
        (block
          (declaration
            (property_name)
            (integer_value
              (unit))))))))

================================================================================
Attribute Selector
================================================================================

a[href="test"]
  color: blue

---

(stylesheet
  (rule_set
    (selectors
      (attribute_selector
        (tag_name)
        (attribute_name)
        (string_value)))
    (block
      (declaration
        (property_name)
        (plain_value)))))

================================================================================
Multiple Selectors
================================================================================

.a, .b
  color: red

---

(stylesheet
  (rule_set
    (selectors
      (class_selector
        (class_name))
      (class_selector
        (class_name)))
    (block
      (declaration
        (property_name)
        (plain_value)))))

================================================================================
Keyframes
================================================================================

@keyframes fadeIn
  from
    opacity: 0
  to
    opacity: 1

---

(stylesheet
  (keyframes_statement
    (at_keyword)
    (keyframes_name)
    (block
      (keyframe_block
        (from)
        (block
          (declaration
            (property_name)
            (integer_value))))
      (keyframe_block
        (to)
        (block
          (declaration
            (property_name)
            (integer_value)))))))

================================================================================
Vendor Prefixed Keyframes
================================================================================

@-webkit-keyframes slide
  0%
    left: 0

---

(stylesheet
  (keyframes_statement
    (at_keyword)
    (keyframes_name)
    (block
      (keyframe_block
        (integer_value
          (unit))
        (block
          (declaration
            (property_name)
            (integer_value)))))))
