tree-sitter-sass/test/corpus/each_comma_list.txt
================================================================================
@each over a bare comma list
================================================================================

@each $animal in puma, sea-slug, egret
  .#{$animal}-icon
    color: red

---

(stylesheet
  (each_statement
    (variable)
    (plain_value)
    (plain_value)
    (plain_value)
    (block
      (rule_set
        (selectors
          (class_selector
            (class_name
              (interpolation
                (variable_value)))))
        (block
          (declaration
            (property_name)
            (plain_value)))))))
